server: fix `sortBy` and `sortOrder`
The commit fixes an issue when respecting `sortBy` and `sortOder`.
The proper ordering provided by the search-hits were not respected when
collecting them after being streamed.

Signed-off-by: vince-fugnitto <vincent.fugnitto@ericsson.com>